# mother3

./: .clang-format  .clang-format-ignore  .gitattributes  .gitignore  INSTALL.md  Makefile  README.md  asmdiff.sh  build.sh  calcrom.pl  config.mk  contents.txt  ctx.c  diff.py  diff_settings.py  do.sh  eng_script.txt  first.txt  genctx.sh  ld_script.ld  ld_script.txt  log.txt  mother3.map.txt  mother3.sha1  progress.py  second.txt  setup.sh  sym_ewram.txt  sym_iwram.txt  syms.sh  virtualsplitter.py
asm/: battle.s  battle_misc.s  bgengine.s  code_0801BEE0.s  code_08021920.s  code_0803D0E4.s  code_0805C1DC.s  code_0805D74C.s  code_080689D4.s  code_0806988C.s  crt0.s  efcsystem.s  fntsystem.s  gcc_fcvt.s  gcc_fcvt2.s  gengine.s  goods.s  guest.s  guestskill.s  inst.inc  keyfocusmanager.s  keypad.s  libc.s  m4a_1.s  monster.s  monsterImplTmp.s  monster_rtti.s  monsterskill.s  objchrpool.s  objengine.s  objpltpool.s  player.s  playerskill.s  psi.s  rassystem.s  rhythm.s  rom.s  rom2.s  rom2b.s  rom2c.s  (+13 more)
data/: data.s  data1.s  data1b.s  data2.s  data3.s  (+7 more)
tools/salsa/: .gitignore  CMakeLists.txt  Makefile  README.md  convLogic.cpp  convTextMisc.cpp  convTextScript.cpp  conv_misc_text.cpp  conv_script.cpp  main.cpp  salsa  salsa.hpp  salsaBinary.hpp  salsaContainer.hpp  salsaLogic.cpp  salsaLogic.hpp  salsaLogicCommands.cpp  salsaLogicCommands.hpp  salsaLogicMaps.cpp  salsaLogicPolyCommands.hpp  salsaLogicScript.hpp  salsaText.cpp  salsaText.hpp  salsaTextDynamic.cpp  salsaTextFixed.cpp  salsaTextMap.cpp  salsa_battletext.cpp  salsa_maintext.cpp  salsa_text.cpp  salsa_text.hpp
(+6685 files in other folders)
